tests/invalid/require_tailrec_3.err_exp2
require_tailrec_3.m:028: In mode number 1 of function `even1'/1:
require_tailrec_3.m:028:   warning: mutually recursive call to function
require_tailrec_3.m:028:   `odd1'/1 is not tail recursive.
require_tailrec_3.m:034: In mode number 1 of function `odd1'/1:
require_tailrec_3.m:034:   warning: mutually recursive call to function
require_tailrec_3.m:034:   `even1'/1 is tail recursive, but tail recursion
require_tailrec_3.m:034:   optimization cannot be applied to it, because the
require_tailrec_3.m:034:   *callee* cannot reach the caller via tail calls
require_tailrec_3.m:034:   only.
require_tailrec_3.m:043: In mode number 1 of function `even2'/1:
require_tailrec_3.m:043:   error: mutually recursive call to function `odd2'/1
require_tailrec_3.m:043:   is not tail recursive.
require_tailrec_3.m:049: In mode number 1 of function `odd2'/1:
require_tailrec_3.m:049:   warning: mutually recursive call to function
require_tailrec_3.m:049:   `even2'/1 is tail recursive, but tail recursion
require_tailrec_3.m:049:   optimization cannot be applied to it, because the
require_tailrec_3.m:049:   *callee* cannot reach the caller via tail calls
require_tailrec_3.m:049:   only.
require_tailrec_3.m:058: In mode number 1 of function `even3'/1:
require_tailrec_3.m:058:   warning: mutually recursive call to function
require_tailrec_3.m:058:   `odd3'/1 is not tail recursive.
require_tailrec_3.m:064: In mode number 1 of function `odd3'/1:
require_tailrec_3.m:064:   warning: mutually recursive call to function
require_tailrec_3.m:064:   `even3'/1 is tail recursive, but tail recursion
require_tailrec_3.m:064:   optimization cannot be applied to it, because the
require_tailrec_3.m:064:   *callee* cannot reach the caller via tail calls
require_tailrec_3.m:064:   only.
For more information, recompile with `-E'.
